--- a/about_me/about_styles/about_style.css
+++ b/about_me/about_styles/about_style.css
@@ -1,6 +1,15 @@
 body{
     margin:0
 }
+
+.back{
+    background-color: white;
+    padding:0.5rem 0 0 0.5rem;
+}
+a{
+    color: #413c69;
+     text-decoration: none;
+    }
 .about_me{
     position:-webkit-sticky; /* Safari */
     position: sticky;
@@ -16,7 +25,7 @@ width: 100%;
     color: #ad62aa;
     font-family: 'Montserrat', sans-serif;
     font-size: 2rem;
-    margin:0.5rem 0 0 0;
+    margin:0;
     text-align: center;
     width: 100%;
 }
