--- a/My_Why/Why_style/why_style.css
+++ b/My_Why/Why_style/why_style.css
@@ -1,53 +1,95 @@
-body{
-    margin:0
+body {
+  margin: 0;
+  text-align: center;
 }
 
-.back{
-    background-color: white;
-    padding:0.5rem 0 0 0.5rem;
-}
-a{
-    color: #413c69;
-     text-decoration: none;
-    }
-
-h3{
-    background-color: white;
-    color: #ad62aa;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2rem;
-    margin:0;
-    text-align: center;
-    width: 100%;
+.back {
+  background-color: #faebeb;
+  border-radius: 3px;
+  box-shadow: #413c69 0px 3px 8px;
+  color: #413c69;
+  font-family: "Montserrat", sans-serif;
+  margin-right: 10px;
+  margin-top: 5px;
+  opacity: 0.7;
+  padding: 5px;
+  position: fixed;
+  right: 10px;
+  text-decoration: none;
+  z-index: 9999;
 }
 
-.photo4{
-width: 100%;
+h3 {
+  background-color: white;
+  color: #413c69;
+  font-family: "Montserrat", sans-serif;
+  font-size: 2rem;
+  margin: 10px 0;
+  text-align: center;
+  width: 100%;
 }
 
-.stiky{
-    position:-webkit-sticky; /* Safari */
-    position: sticky;
-    top: 0;
+.photo4 {
+  width: 95%;
+  box-shadow: 2px 6px 11px 3px #413c69;
 }
 
-.article{
-    width: 100%;
-    
+.Why-text {
+  margin-bottom: 7rem;
 }
-    .text{
-        font-family:'Domine', serif;
-        font-size: 0.6rem;
-        font-style: italic;
-        line-height: 1.6;
-        padding-left: 1rem;
-        padding-right: 1rem;   
-        text-align: justify;
-      }
 
-      .dots{
-        border-color: #ad62aa;
-        border-style: dotted none none;
-        border-width: 0.2rem;
-        width: 5%;
-    }
+.text {
+  font-family: "Domine", serif;
+  font-size: 0.6rem;
+  font-style: italic;
+  line-height: 1.6;
+  margin-top: 15px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  text-align: justify;
+}
+
+.dots {
+  border-color: #ad62aa;
+  border-style: dotted none none;
+  border-width: 0.2rem;
+  width: 5%;
+}
+
+/*footer*/
+
+h6 {
+  color: #413c69;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1rem;
+  font-weight: bold;
+  margin-bottom: 0.2rem;
+  margin-top: 5px;
+  padding-top: 0rem;
+}
+
+.iconify {
+  color: #413c69;
+  margin: 0.2rem 0.5rem 0 0.5rem;
+}
+
+.iconify:hover {
+  color: grey;
+}
+
+footer {
+  background-color: #faebeb;
+  bottom: 0px;
+  box-shadow: #413c69 0px 3px 8px;
+  height: 5.8rem;
+  position: fixed;
+  width: 100%;
+  z-index: 9999;
+}
+
+.copyright {
+  color: #413c69;
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.7rem;
+  margin: 0;
+}
