--- a/My_Projects/projects_style/projects_style.css
+++ b/My_Projects/projects_style/projects_style.css
@@ -3,227 +3,230 @@ body {
   text-align: center;
 }
 
-/*media query*/
+.back {
+  background-color: #faebeb;
+  border-radius: 3px;
+  box-shadow: #413c69 0px 3px 8px;
+  color: #413c69;
+  font-family: "Montserrat", sans-serif;
+  margin-right: 0.6rem;
+  margin-top: 1rem;
+  opacity: 0.7;
+  padding: 5px;
+  position: fixed;
+  right: 10px;
+  text-decoration: none;
+  z-index: 9999;
+}
 
-@media only screen and (max-width: 420px) {
-  .mobBack {
-    background-color: white;
-    padding: 0.2rem 0 0 0.2rem;
-  }
-  .back {
-    background-color: white;
-    box-shadow: #413c69 0px 3px 8px;
-    color: #413c69;
-    /*float: right;*/
-    font-family: "Montserrat", sans-serif;
-    margin-right: 10px;
-    margin-top: 5px;
-    padding: 5px;
-    text-decoration: none;
-    position: fixed;
-    z-index: 9999;
-    right: 10px;
-    opacity: 0.7;
-  }
-  h3 {
-    color: #413c69;
-    font-family: "Montserrat", sans-serif;
-    font-size: 2rem;
-    margin-top: 30px;
-    margin-bottom: 0.5rem;
-    text-align: center;
-    width: 100%;
-  }
+h3 {
+  background-color: white;
+  color: #413c69;
+  font-family: "Montserrat", sans-serif;
+  font-size: 2rem;
+  margin-bottom: 20px;
+  padding-top: 1.5rem;
+  text-align: center;
+  width: 100%;
+}
 
-  .picture-carousel {
-    height: 13rem;
-    width: 20rem;
-  }
+.projects {
+  margin-bottom: 7rem;
+}
 
-  .flex-wrapper {
-    display: grid;
-    justify-content: center;
-    margin: 2rem auto 0.5rem auto;
-  }
+/*image carousel*/
 
-  .slider-wrapper {
-    height: 100%;
-    position: relative;
-  }
+.picture-carousel {
+  height: auto;
+  width: 80vw;
+}
 
-  #btn-prev,
-  #btn-next {
-    background-color: gray;
-    cursor: pointer;
-    height: 100%;
-    left: 0;
-    opacity: 0.4;
-    position: absolute;
-    top: 0;
-    transition: opacity 0.2s ease-in-out;
-    width: 1.5rem;
-  }
+.slider-wrapper {
+  width: 80%;
+  margin: auto;
+  position: relative;
+}
 
-  #btn-prev:hover,
-  #btn-next:hover {
-    opacity: 0.6;
-  }
+#btn-next {
+color: white; 
+font-size: 2rem;  
+left:86%;  
+padding: 0.5rem;    
+position: absolute; 
+top: 40%; 
+transform: translate(0%, -50%); 
+}
 
-  #btn-next {
-    left: auto;
-    right: 0;
-  }
+#btn-prev{
+  color: white; 
+  font-size: 2rem; 
+  padding: 0.5rem; 
+  position: absolute; 
+  right: 86%;
+  top: 40%; 
+  transform: translate(0%, -50%); 
+}
 
-  span {
-    background-color: gray;
-    border-radius: 50%;
-    cursor: pointer;
-    height: 0.5rem;
-    margin-right: 0.5rem;
-    width: 0.5rem;
-  }
-  span:last-child {
-    margin-right: 0;
+#btn-prev:hover,
+#btn-next:hover {
+  background-color: grey;
+  cursor: pointer;
+  opacity: 0.6;
   }
 
-  .slide {
-    box-shadow: 2px 6px 11px 3px #413c69;
-    display: none;
-  }
 
-  .slide.active {
-    display: block;
-  }
 
-  .dots-wrapper {
-    display: flex;
-    justify-content: center;
-    margin-top: 0;
-  }
+span {
+  background-color: gray;
+  border-radius: 50%;
+   cursor: pointer; 
+   height: 0.6rem;    
+   margin-right: 0.5rem;
+   width: 0.6rem;
+}
+span:last-child {
+  margin-right: 0;
+}
 
-  .dot.active {
-    background-color: #000000;
-  }
+.slide {
+  box-shadow: 2px 6px 11px 3px #413c69;
+  display: none;
+}
 
-  /* MQ play/pause btn*/
+.slide.active {
+  display: block;
+}
 
-  .controls {
-    background: #404040;
-    border: none;
-    border-radius: 0.4rem;
-    color: #ffffff !important;
-    font-family: "Montserrat", sans-serif;
-    font-size: 0.5rem;
-    letter-spacing: 0.4rem;
-    margin-top: 0.9rem;
-    padding: 0.5rem;
-    text-transform: uppercase;
-    transition: all 0.3s ease 0s;
-    width: 5rem;
-  }
+.dots-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+}
 
-  .controls:hover {
-    background: none;
-    box-shadow: 0px 5px 40px -10px #413c69;
-    color: #404040 !important;
-    font-weight: 700 !important;
-    letter-spacing: 0.3rem;
-    transition: all 0.3s ease 0s;
-  }
+.dot.active {
+  background-color: #000000;
+}
 
-  /*other projects*/
+.controls {
+  background: #404040;
+  border: none;
+  border-radius: 0.4rem;
+  color: #ffffff;
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.5rem;
+  letter-spacing: 0.4rem;
+  margin-top: 0.9rem;
+  padding: 0.5rem;
+  text-transform: uppercase;
+  transition: all 0.3s ease 0s;
+  width: 5rem;
+}
 
-  .other-projects {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    margin-top: 2rem;
-    position: relative;
-    width: 100%;
-  }
+.controls:hover {
+  background: none;
+  box-shadow: 0px 5px 40px -10px #413c69;
+  color: #404040;
+  font-weight: 700;
+  letter-spacing: 0.3rem;
+  transition: all 0.3s ease 0s;
+}
 
-  .picture-projects {
-    box-shadow: 2px 6px 11px 3px #413c69;
-    width: 100%;
-  }
+/*other projects*/
 
-  .picture-projects:hover {
-    opacity: 0.7;
-  }
-  .text-project {
-    font-size: 1rem;
-    line-height: 2;
-    text-decoration: none;
-  }
+.other-projects {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  margin-top: 1.5rem;
+  position: relative;
+  width: 100%;
+}
 
-  h5 {
-    color: #413c69;
-    font-family: "Montserrat", sans-serif;
-    font-size: 1.5rem;
-    font-weight: bolder;
-    margin-bottom: 2rem;
-    margin: 1rem, 0;
-  }
+.picture-projects {
+  box-shadow: 2px 6px 11px 3px #413c69;
+  width: 100%;
+}
 
-  .more {
-    font-size: 0.9rem;
-    margin: 1rem 0.2rem;
-  }
+.picture-projects:hover {
+  opacity: 0.7;
+}
+.text-project {
+  font-size: 1rem;
+  line-height: 2;
+  text-decoration: none;
+}
 
-  figcaption {
-    color: #413c69;
-    font-family: "Montserrat", sans-serif;
-    font-weight: bold;
-    margin-top: 0.5rem;
-    padding: 0.4rem;
-  }
+h5 {
+  color: #413c69;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.5rem;
+  font-weight: bolder;
+  margin-bottom: 2rem;
+  margin: 1rem, 0;
+}
 
-  /*links*/
+.more {
+  font-size: 0.9rem;
+  margin: 1rem 0.2rem;
+}
 
-  .links {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 3rem;
-    width: 100%;
-  }
-  .project-links {
-    text-decoration: none;
-  }
+figcaption {
+  color: #413c69;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  margin-top: 0.5rem;
+  padding: 0.4rem;
+}
 
-  figcaption:hover {
-    color: grey;
-  }
+/*links*/
 
-  /*footer*/
+.links {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 3rem;
+  width: 100%;
+}
+.project-links {
+  text-decoration: none;
+}
 
-  h6 {
-    color: #413c69;
-    font-family: "Montserrat", sans-serif;
-    font-size: 1rem;
-    font-weight: bold;
-    margin-bottom: 0.2rem;
-    padding-top: 0.5rem;
-  }
+figcaption:hover {
+  color: grey;
+}
 
-  .iconify {
-    color: #413c69;
-    margin: 0.2rem 0.5rem 0 0.5rem;
-  }
+/*footer*/
 
-  .iconify:hover {
-    color: grey;
-  }
+h6 {
+  color: #413c69;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1rem;
+  font-weight: bold;
+  margin-bottom: 0.2rem;
+  margin-top: 5px;
+  padding-top: 0rem;
+}
 
-  footer {
-    background-color: white;
-    box-shadow: #413c69 0px 3px 8px;
-    height: 5.8rem;
-    width: 100%;
-  }
+.iconify {
+  color: #413c69;
+  margin: 0.2rem 0.5rem 0 0.5rem;
+}
 
-  .copyright {
-    color: #413c69;
-    font-family: "Montserrat", sans-serif;
-    font-size: 0.7rem;
-    margin: 0;
-  }
+.iconify:hover {
+  color: grey;
+}
+
+footer {
+  background-color: #faebeb;
+  bottom: 0px;
+  box-shadow: #413c69 0px 3px 8px;
+  height: 5.8rem;
+  position: fixed;
+  width: 100%;
+  z-index: 9999;
+}
+
+.copyright {
+  color: #413c69;
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.7rem;
+  margin: 0;
 }
