--- a/Styles/style.css
+++ b/Styles/style.css
@@ -585,7 +585,7 @@ h3 {
   font-family: "Montserrat", sans-serif;
   font-size: 3.5rem;
   margin-top: 0;
-  margin-bottom: 0.5rem;
+  margin-bottom: 2rem;
   width: 100%;
 }
 h3 {
@@ -594,7 +594,7 @@ h3 {
   font-family: "Montserrat", sans-serif;
   font-size: 3.5rem;
   margin-top: 1rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 2rem;
   width: 100%;
 }
 
@@ -695,34 +695,36 @@ h3 {
 
 
     #text-bar {
-      background-color: blue;
-      width: 100%;
-      height: 36px; 
-      position: absolute; 
-      top: 83%;
-      transform: translate(0%, -100%);  
-      text-align: center; 
-      height: 36px;
+      background-color: black;
+      display: none;
       line-height: 36px;
       opacity: 0.7;
+      position: absolute; 
+     text-align: center; 
+      top: 100%;
+      transform: translate(0%, -100%); 
+      width: 100%;      
     }
     
     #description {
-      padding: 0px;
-      margin: 0px; 
-      color: white;
-      position: relative;
+     color: white;
       display: inline-block;
+      font-family: "Montserrat", sans-serif;
+      font-size: 1.5rem;
+      margin:0.7rem;
+      position: relative;
     }
     
 /*other projects*/
 
 .other-projects {
   display: grid;
+  /*grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));*/
   grid-template-columns: repeat(3, 1fr);
   margin-top: 5rem;
   position: relative;
-  width: 100%;
+
+ width: 100%;
 }
 
 .picture-projects {
@@ -740,11 +742,14 @@ figcaption {
   font-weight: bold;
   margin-top: 0.5rem;
   padding: 0.4rem;
+  font-size: 1.5rem;
+  line-height: 2;
+  
 }
 
 .text-project {
-  font-size: 1.5rem;
-  line-height: 2;
+  /*font-size: 1.5rem;
+  line-height: 2;*/
   text-decoration: none;
 }
 
@@ -755,6 +760,7 @@ h5 {
   font-size: 2rem;
   font-weight: bolder;
   margin-bottom: 2rem;
+  cursor: pointer;
 }
 .links {
   display: flex;
