My Projects: add description of images to image carousel

--- a/My_Projects/projects_style/projects_style.css
+++ b/My_Projects/projects_style/projects_style.css
@@ -131,6 +131,27 @@ span:last-child {
   transition: all 0.3s ease 0s;
 }
 
+#text-bar {
+  background-color: black;
+  display: none;
+  line-height: 1rem;
+  opacity: 0.7;
+  position: absolute; 
+ text-align: center; 
+  top: 100%;
+  transform: translate(0%, -100%); 
+  width: 100%;      
+}
+
+#description {
+ color: white;
+  display: inline-block;
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.8rem;
+  margin:0.3rem;
+  position: relative;
+}
+
 /*other projects*/
 
 .other-projects {
