--- a/Styles/style.css
+++ b/Styles/style.css
@@ -115,7 +115,7 @@ margin-right: 0;
   padding-top: 2.5rem;
   position: relative;
   text-align: center;
-  z-index: -1; /* image will be hehind the text*/
+  /*z-index: -1; /* image will be hehind the text*/
 }
 
 .mobile-photo {
@@ -156,35 +156,40 @@ h2 {
 .but1 {
   animation-duration: 2s;
 animation-name: twinkle;
+cursor: url("../Images/net.png"), pointer;
   height: 5rem;
   left: 22%;
   position: absolute;
   top: 36%;
   transform: rotate(-30deg);
   width: 5rem;
-
+  
 }
 
 .but2 {
+  animation-duration: 2.5s;
+  animation-name: twinkle;
+  cursor: url("../Images/net.png"), pointer;
   height: 6rem;
   left: 25%;
   position: absolute;
   top: 13%;
   transform: rotate(-30deg);
   width: 6rem;
-  animation-duration: 2.5s;
-  animation-name: twinkle;
+  
 }
 
 .but3 {
+animation-duration: 3s;
+animation-name: twinkle;
+cursor: url("../Images/net.png"), pointer;
   height: 6.25rem;
   position: absolute;
   right: 25%;
   top: 15%;
   transform: rotate(30deg);
   width: 6.25rem;
-  animation-duration: 3s;
-animation-name: twinkle;
+  
 }
 
 @keyframes twinkle {
